// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 0 as index -- show latest 1`] = `
<div>
  <li
    class="FileVersionList--Element"
  >
    <button
      class="FileVersionElement--button w-24"
    >
      Latest
    </button>
    <span
      class="FileVersionElement--button FileVersionList--hidden w-12"
    >
      <button>
        <svg
          height="10"
          id="mock-icon"
          kind="copy"
          width="10"
        >
          <title>
            icon-
            copy
          </title>
        </svg>
      </button>
    </span>
    <div
      class="Avatar inline-block mr-8 hidden"
      style="height: 20px; width: 20px;"
    >
      <img
        alt="null avatar"
        class="Avatar-img"
        src="https://www.w3schools.com/css/img_avatar.png"
      />
    </div>
    <time
      class="FileVersionList--text w-32"
      datetime="2018-08-21T03:16:11.000Z"
      title="2018-08-21T03:16:11+00:00"
    >
      8 months ago
    </time>
    <p
      class="FileVersionList--text w-16 hidden"
    >
      .jpeg
    </p>
    <p
      class="FileVersionList--text w-24"
    >
      9.9 kB
    </p>
    <div
      class="FileInfo--Icon"
    />
    <p
      class="FileVersionList--text w-48"
    >
      Clinical/Phenotype Data
    </p>
    <button>
      <svg
        class="FileVersionList--hidden w-12"
        height="12"
        id="mock-icon"
        kind="download"
        width="12"
      >
        <title>
          icon-
          download
        </title>
      </svg>
    </button>
  </li>
</div>
`;

exports[`renders correctly with 1 as index -- show version kfId 1`] = `
<div>
  <li
    class="FileVersionList--Element"
  >
    <button
      class="FileVersionElement--button w-24"
    >
      FV_TT8NF09R
    </button>
    <span
      class="FileVersionElement--button FileVersionList--hidden w-12"
    >
      <button>
        <svg
          height="10"
          id="mock-icon"
          kind="copy"
          width="10"
        >
          <title>
            icon-
            copy
          </title>
        </svg>
      </button>
    </span>
    <div
      class="Avatar inline-block mr-8 hidden"
      style="height: 20px; width: 20px;"
    >
      <img
        alt="null avatar"
        class="Avatar-img"
        src="https://www.w3schools.com/css/img_avatar.png"
      />
    </div>
    <time
      class="FileVersionList--text w-32"
      datetime="2018-08-21T03:16:11.000Z"
      title="2018-08-21T03:16:11+00:00"
    >
      8 months ago
    </time>
    <p
      class="FileVersionList--text w-16 hidden"
    >
      .jpeg
    </p>
    <p
      class="FileVersionList--text w-24"
    >
      9.9 kB
    </p>
    <div
      class="FileInfo--Icon"
    />
    <p
      class="FileVersionList--text w-48"
    >
      Clinical/Phenotype Data
    </p>
    <button>
      <svg
        class="FileVersionList--hidden w-12"
        height="12"
        id="mock-icon"
        kind="download"
        width="12"
      >
        <title>
          icon-
          download
        </title>
      </svg>
    </button>
  </li>
</div>
`;
